# AoC_2024

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile
Day_1/: main.c
Day_2/: main.c
Day_3/: main.c  test.txt
